# SHADERed

./: CMakeLists.txt
libs/ImFileDialog/: CMakeLists.txt  ImFileDialog.cpp  ImFileDialog.h  ImFileDialogMacros.h  LICENSE  README.md
src/SHADERed/: GUIManager.cpp
src/SHADERed/Objects/: PluginManager.cpp
src/SHADERed/UI/: CodeEditorUI.cpp  CreateItemUI.cpp  ObjectListUI.cpp  ObjectPreviewUI.cpp  OptionsUI.cpp  PropertyUI.cpp
